namespace IntegrationHub.Domain.Enums;

public enum IntegrationType
{
    Orders = 0,
    Customers = 1, 
}