namespace IntegrationHub.Domain.Enums;

public enum RunStatus
{
    Pending = 0,
    Running = 1,
    Success = 2,
    Failed = 3
}