// <auto-generated />
using System;
using IntegrationHub.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace IntegrationHub.Infrastructure.Migrations
{
    [DbContext(typeof(IntegrationHubDbContext))]
    [Migration("20260309192402_SyncModelWithCurrentEntities")]
    partial class SyncModelWithCurrentEntities
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.24")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("IntegrationHub.Domain.Entities.Integration", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<bool>("IsActive")
                        .HasColumnType("bit");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<Guid>("SourceEndpointId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("TargetEndpointId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("Type")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("SourceEndpointId");

                    b.HasIndex("TargetEndpointId");

                    b.ToTable("Integrations");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.IntegrationLog", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<Guid>("IntegrationRunId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("Level")
                        .HasColumnType("int");

                    b.Property<string>("Message")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTimeOffset>("Timestamp")
                        .HasColumnType("datetimeoffset");

                    b.HasKey("Id");

                    b.HasIndex("IntegrationRunId");

                    b.ToTable("IntegrationLogs");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.IntegrationRun", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTimeOffset>("CreatedAt")
                        .HasColumnType("datetimeoffset");

                    b.Property<string>("ErrorMessage")
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTimeOffset?>("FinishedAt")
                        .HasColumnType("datetimeoffset");

                    b.Property<Guid>("IntegrationId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("MaxRetries")
                        .HasColumnType("int");

                    b.Property<DateTimeOffset?>("NextRetryAt")
                        .HasColumnType("datetimeoffset");

                    b.Property<int>("RetryCount")
                        .HasColumnType("int");

                    b.Property<DateTimeOffset?>("StartedAt")
                        .HasColumnType("datetimeoffset");

                    b.Property<int>("Status")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("IntegrationId");

                    b.ToTable("IntegrationRuns");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.SystemEndpoint", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("ApiKey")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("ApiKeyHeaderName")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("BaseUrl")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<bool>("IsActive")
                        .HasColumnType("bit");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("SystemEndpoints");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.Integration", b =>
                {
                    b.HasOne("IntegrationHub.Domain.Entities.SystemEndpoint", "SourceEndpoint")
                        .WithMany("SourceIntegrations")
                        .HasForeignKey("SourceEndpointId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("IntegrationHub.Domain.Entities.SystemEndpoint", "TargetEndpoint")
                        .WithMany("TargetIntegrations")
                        .HasForeignKey("TargetEndpointId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("SourceEndpoint");

                    b.Navigation("TargetEndpoint");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.IntegrationLog", b =>
                {
                    b.HasOne("IntegrationHub.Domain.Entities.IntegrationRun", "IntegrationRun")
                        .WithMany("Logs")
                        .HasForeignKey("IntegrationRunId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("IntegrationRun");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.IntegrationRun", b =>
                {
                    b.HasOne("IntegrationHub.Domain.Entities.Integration", "Integration")
                        .WithMany("Runs")
                        .HasForeignKey("IntegrationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Integration");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.Integration", b =>
                {
                    b.Navigation("Runs");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.IntegrationRun", b =>
                {
                    b.Navigation("Logs");
                });

            modelBuilder.Entity("IntegrationHub.Domain.Entities.SystemEndpoint", b =>
                {
                    b.Navigation("SourceIntegrations");

                    b.Navigation("TargetIntegrations");
                });
#pragma warning restore 612, 618
        }
    }
}
