@startuml
title IntegrationHub - Domain Class Diagram

skinparam classAttributeIconSize 0
hide empty members

class SystemEndpoint {
  +Guid Id
  +string Name
  +string BaseUrl
  +string? ApiKey
  +string? ApiKeyHeaderName
  +bool IsActive
}

class Integration {
  +Guid Id
  +string Name
  +IntegrationType Type
  +Guid SourceEndpointId
  +Guid TargetEndpointId
  +bool IsActive
}

class IntegrationRun {
  +Guid Id
  +Guid IntegrationId
  +DateTimeOffset CreatedAt
  +DateTimeOffset? StartedAt
  +DateTimeOffset? FinishedAt
  +RunStatus Status
  +string? ErrorMessage
  +int RetryCount
  +int MaxRetries
  +DateTimeOffset? NextRetryAt
}

class IntegrationLog {
  +Guid Id
  +Guid IntegrationRunId
  +DateTimeOffset Timestamp
  +LogLevel Level
  +string Message
}

enum IntegrationType {
  Orders
  Customers
}

enum RunStatus {
  Pending
  Running
  Success
  Failed
}

enum LogLevel {
  Info
  Warning
  Error
}

SystemEndpoint "1" <-- "0..*" Integration : source
SystemEndpoint "1" <-- "0..*" Integration : target
Integration "1" <-- "0..*" IntegrationRun : runs
IntegrationRun "1" <-- "0..*" IntegrationLog : logs

Integration ..> IntegrationType
IntegrationRun ..> RunStatus
IntegrationLog ..> LogLevel

@enduml
